--- a/.github/workflows/poi-image.yml
+++ b/.github/workflows/poi-image.yml
@@ -22,5 +22,5 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }} 
     - run: |
             cd ${{ github.workspace }}/apis/poi/web
-            docker build . -t openhackgr65e605acr.azurecr.io/appdb:${{ github.sha }} 
-            docker push openhackgr65e605acr.azurecr.io/appdb:${{ github.sha }}
+            docker build . -t openhackgr65e605acr.azurecr.io/devopsoh/api-poi:${{ github.sha }} 
+            docker push openhackgr65e605acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}
