--- a/.github/workflows/userjava-image.yml
+++ b/.github/workflows/userjava-image.yml
@@ -3,9 +3,6 @@ name: Docker Image CI
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
-    
 
 jobs:
 
@@ -24,3 +21,14 @@ jobs:
             cd ${{ github.workspace }}/apis/user-java
             docker build . -t openhackgr65e605acr.azurecr.io/devopsoh/api-user-java:${{ github.sha }} 
             docker push openhackgr65e605acr.azurecr.io/devopsoh/api-user-java:${{ github.sha }}
+  deploy:
+    needs:
+    - build
+    runs-on: ubuntu-latest
+    if: ${{success() && github.ref == 'refs/heads/main'}}
+    steps:
+    - uses: azure/webapps-deploy@v2
+      with:
+          app-name: 'openhackgr65e605userjava'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_USERJAVA }}
+          images: 'openhackgr65e605acr.azurecr.io/devopsoh/api-user-java:${{ github.sha }}'
