--- a/.github/workflows/userprofile-image.yml
+++ b/.github/workflows/userprofile-image.yml
@@ -3,10 +3,7 @@ name: Docker Image CI
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
-    
-
+ 
 jobs:
 
   build:
@@ -24,3 +21,15 @@ jobs:
             cd ${{ github.workspace }}/apis/userprofile
             docker build . -t openhackgr65e605acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }} 
             docker push openhackgr65e605acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }}
+   
+  deploy:
+    needs:
+    - build
+    runs-on: ubuntu-latest
+    if: ${{success() && github.ref == 'refs/heads/main'}}
+    steps:
+    - uses: azure/webapps-deploy@v2
+      with:
+          app-name: 'openhackgr65e605userprofile'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_USERPROFILE }}
+          images: 'openhackgr65e605acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }}'  
