--- a/.github/workflows/poi-image.yml
+++ b/.github/workflows/poi-image.yml
@@ -32,7 +32,7 @@ jobs:
           app-name: 'openhackgr65e605poi'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           images: 'openhackgr65e605acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}'
-    - uses: azure/login@v1
+    - uses: azure/actions/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     - run: |
