--- a/.github/workflows/poi-image.yml
+++ b/.github/workflows/poi-image.yml
@@ -32,15 +32,17 @@ jobs:
           app-name: 'openhackgr65e605poi'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           images: 'openhackgr65e605acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}'
-    - uses: azure/actions/login@v1
+    - name: Login via Az module
+      uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        creds: ${{secrets.AZURE_CREDENTIALS}}
+        enable-AzPSSession: true
     - run: |
           $poiResponse = Invoke-RestMethod -Method Get -Uri 'https://openhackgr65e605poi-staging.azurewebsites.net/api/healthcheck/poi'
           if($poiResponse.status -eq 'Healthy')
           {
-            az account set -s ${{ secrets.SUB_ID }}
-            az webapp deployment slot swap -g 'openhackgr65e605rg' -n 'openhackgr65e605poi' --slot 'openhackgr65e605poi-staging' --target-slot 'openhackgr65e605poi'
+            Set-AzContext -SubscriptionId ${{ secrets.SUB_ID }}
+            Switch-AzWebAppSlot -SourceSlotName 'openhackgr65e605poi-staging' -DestinationSlotName 'openhackgr65e605poi' -ResourceGroupName 'openhackgr65e605rg' -Name 'openhackgr65e605poi'
           }
           else{
             write-output "API is not healthy and could not be deployed to Production."
