--- a/.github/workflows/poi-image.yml
+++ b/.github/workflows/poi-image.yml
@@ -41,6 +41,8 @@ jobs:
           $poiResponse = Invoke-RestMethod -Method Get -Uri 'https://openhackgr65e605poi-staging.azurewebsites.net/api/healthcheck/poi'
           if($poiResponse.status -eq 'Healthy')
           {
+            Install-Module -Name Az.Websites -Scope CurrentUser -AllowClobber -Repository PSGallery -Force
+            Import-Module -Name Az.Websites
             Switch-AzWebAppSlot -SourceSlotName 'openhackgr65e605poi-staging' -DestinationSlotName 'openhackgr65e605poi' -ResourceGroupName 'openhackgr65e605rg' -Name 'openhackgr65e605poi'
           }
           else{
