--- a/.github/workflows/poi-image.yml
+++ b/.github/workflows/poi-image.yml
@@ -6,7 +6,7 @@ on:
     branches: [ main ]
     paths:
         - 'apis/poi/**' 
- 
+  workflow_dispatch :
 jobs:
   build:
     runs-on: ubuntu-latest
